--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor = "#0B3C5D"
-backgroundColor = "#FFFFFF"
-secondaryBackgroundColor = "#F5F7FA"
-textColor = "#000000"
+primaryColor = "#8B6F47"              # Dark beige / brown (buttons)
+backgroundColor = "#F5F1E8"           # Light beige background
+secondaryBackgroundColor = "#EDE4D3"  # Card / box beige
+textColor = "#2E2E2E"                 # Dark text
 font = "sans serif"
